--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.kagmole.workshops</groupId>
-	<artifactId>angularjs-workshop-webservice</artifactId>
+	<artifactId>workshop-basic-chat-web-service</artifactId>
 	<version>v0.1.0</version>
 	<packaging>jar</packaging>
 	
-	<name>AngularJS workshop web service</name>
-	<description>Web service used in the AngularJS workshop.</description>
+	<name>Basic chat — Web service</name>
+	<description>Web service used in the basic chat workshop.</description>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -30,10 +30,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		
 		<dependency>
